# vs-nlm-hip

./: CMakeLists.txt  README.md  hatch_build.py  pyproject.toml
.github/actions/setup-hip-windows/: action.yml
.github/workflows/: linux.yml  publish.yml  windows.yml
source/: common.h  config.h.in  kernel.hip  source.cpp
