[build-system]
requires = ["hatchling>=1.29.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "vapoursynth-nlm-hip"
dynamic = ["version"]
description = "Non-local means denoise filter in HIP, drop-in replacement of the KNLMeansCL for VapourSynth"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [{ name = "TheFeelTrain" }]
maintainers = [
    { name = "TheFeelTrain", email = "the@feeltra.in" }
]
dependencies = ["vapoursynth>=74"]

[dependency-groups]
dev = ["hatchling>=1.27.0", "packaging"]

[project.urls]
"Source Code" = "https://github.com/TheFeelTrain/vs-nlm-hip"
"Bug Tracker" = "https://github.com/TheFeelTrain/vs-nlm-hip/issues"

[tool.hatch.version]
source = "vcs"
tag-pattern = '^v(?P<version>.*)$'

[tool.hatch.build.targets.sdist]
include = ["source", "CMakeLists.txt"]

[tool.hatch.build.targets.wheel]
include = ["vapoursynth/plugins/nlm_hip"]
artifacts = [
    "vapoursynth/plugins/**/*.so",
    "vapoursynth/plugins/**/*.dll",
    "vapoursynth/plugins/**/manifest.vs"
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"
